# LitQEval

./: .gitignore  .gitmodules  README.md  data.py  eval_datasets.bib  eval_datasets.xlsx  jabref_reader.py  notes.txt  pyproject.toml  results.xlsx  slr_results.xlsx
data/: core_publications.xlsx  metadata.xlsx  publications.bib  queries.json
data/text/Business_Process_Meta_Models/: baseline_pubs.csv  slr_pubs.csv
data/text/Cloud_Migration/: slr_pubs.csv
data/text/Data_Stream_Processing_Latency/: baseline_pubs.csv  slr_pubs.csv
data/text/Drones_in_Agriculture/: baseline_pubs.csv
data/text/Green_Warehousing/: baseline_pubs.csv
data/text/Multicore_Performance_Prediction/: baseline_pubs.csv  slr_pubs.csv
data/text/Nanopharmaceuticals_OR_Nanonutraceuticals/: baseline_pubs.csv
data/text/Robotic_Arthroplasty/: baseline_pubs.csv
data/text/Software_Fault_Prediction_Metrics/: baseline_pubs.csv
data/text/Software_Process_Line/: predicted_pubs.csv
data/text/Sustainable_Biofuel_Economy/: baseline_pubs.csv
data/text/Tourism_Growth_Nexus/: baseline_pubs.csv
data/vector_store/: index.faiss  index.pkl
litQeval/: core_embeddings.ipynb  data.py  eval.ipynb  eval_utils.py  evaluate.py
litQeval/notebooks/: ablation.ipynb  core_embeddings.ipynb  dataset_eda.ipynb  empirical_threshold.ipynb  eval_pipeline.ipynb  eval_results.ipynb  figures.ipynb  umap_loss.ipynb
