[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Mohammad Saknini <mohammad.saknini@int.fraunhofer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.5"
bibtexparser = "^1.4.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
dimcli = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
