[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Mohammad Saknini <mohammad.saknini@int.fraunhofer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.5"
bibtexparser = "^1.4.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
dimcli = "^1.3"
openai = "^1.53.0"
ipykernel = "^6.29.5"
langchain-community = "^0.3.4"
langchain-openai = "^0.2.4"
faiss-cpu = "^1.9.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
umap-learn = "^0.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
