[tool.poetry]
name = "litqeval"
version = "0.1.0"
description = ""
authors = ["Mohammad Saknini <mohammad.saknini@int.fraunhofer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
langchain-openai = "^0.2.5"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
langchain-chroma = "^0.1.4"
plotly = "^5.24.1"
dimcli = "^1.3"
bibtexparser = "^1.4.2"
umap-learn = "^0.5.7"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
nbformat = "^5.10.4"
ipywidgets = "^8.1.5"
matplotlib = "^3.9.2"
orca = "^1.8"
kaleido = "0.1.0post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
